# codem-stactask

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt
examples/input/: input-payload.json
examples/output/: output-payload.json
examples/output/1_smallAOI_registered/: 1_smallAOI_registered.tif  config.yml  registration.txt
scripts/: test
src/codem_stactask/: coreg.py
